<resources>
    <string name="app_name">Mapping</string>
    <string name="btn1">Go</string>
    <string name="btn2">Reset</string>
    <string name="setLocationButton">Set Location</string>
    <string name="latString">Lat:</string>
    <string name="lonString">Long:</string>
    <string name="zoomString">Zoom:</string>
    <string name="latInitMsg">10'</string>
    <string name="lonInitMsg">20'</string>
    <string name="choosemap">Choose Map</string>
    <string name="regularview">Regular Map</string>
    <string name="hikebikemapview">Hike and Bike Map</string>
    <string name="selectmap">Select map</string>
    <string name="setlocation">Set Location</string>
    <string name="setdefaults">Preferences</string>

</resources>
