<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/latitudeTextView"
                android:text="@string/latString"
                android:textSize="10pt"
                android:paddingRight="23dp"
                android:layout_alignParentLeft="true"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/latitudeEditText"
                android:textSize="10pt"
                android:hint="@string/latInitMsg"
                android:inputType="numberDecimal|numberSigned"
                android:layout_toRightOf="@id/tv2"
                />
        </RelativeLayout>

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/longtitudeTextView"
                android:gravity="center"
                android:textSize="10pt"
                android:text="@string/lonString"
                android:layout_alignParentLeft="true"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/longitudeEdiText"
                android:gravity="center"
                android:textSize="10pt"
                android:hint="@string/lonInitMsg"
                android:inputType="numberDecimal|numberSigned"
                android:layout_toRightOf="@id/tv3"
                />
        </RelativeLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <Button
                android:id="@+id/setLocationButton"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/setLocationButton"
                />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>