<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    >


   <RelativeLayout android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/latString"
            android:textSize="10pt"
            android:layout_alignParentLeft="true"
            android:id="@+id/tv2"
            />

       <TextView android:layout_width="50dp"
           android:layout_height="wrap_content"
           android:gravity="center"
           android:textSize="10pt"
           android:layout_toRightOf="@id/tv2"
           android:id="@+id/tv2_value"
           />

       <TextView android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:gravity="center"
           android:text="@string/lonString"
           android:textSize="10pt"
           android:paddingLeft="20dp"
           android:layout_toRightOf="@id/tv2_value"
           android:id="@+id/tv3"
           />
       <TextView android:layout_width="50dp"
           android:layout_height="wrap_content"
           android:gravity="center"
           android:textSize="10pt"
           android:layout_toRightOf="@id/tv3"
           android:id="@+id/tv3_value"
           />

       <TextView android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:gravity="center"
           android:text="@string/zoomString"
           android:textSize="10pt"
           android:paddingLeft="40dp"
           android:layout_toRightOf="@id/tv3_value"
           android:id="@+id/tv4"
           />
       <TextView android:layout_width="50dp"
           android:layout_height="wrap_content"
           android:gravity="center"
           android:textSize="10pt"
           android:layout_toRightOf="@id/tv4"
           android:id="@+id/tv4_value"
           />
    </RelativeLayout>


    <org.osmdroid.views.MapView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:enabled="true"
        android:clickable="true"
        android:id="@+id/map1"
        tilesource="Mapnik"
        />

</LinearLayout>
